ide/MoonshineSharedCore/src/elements/tbls/language/TibboBasic/lib/TibboBasicPreprocessorParser.js
// Generated from /Users/jimmyhu/Projects/TIDEDesktopService/language/TibboBasic/TibboBasicPreprocessorParser.g4 by ANTLR 4.8
// jshint ignore: start
var antlr4 = require('antlr4/index');
var TibboBasicPreprocessorParserListener = require('./TibboBasicPreprocessorParserListener').TibboBasicPreprocessorParserListener;
var TibboBasicPreprocessorParserVisitor = require('./TibboBasicPreprocessorParserVisitor').TibboBasicPreprocessorParserVisitor;

var grammarFileName = "TibboBasicPreprocessorParser.g4";




var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, null, null, null, null, null, null, null, null, 
                     null, null, null, null, null, null, null, null, null, 
                     "'!'", "'('", "')'", "'='", "'<>'", null, null, "'<'", 
                     "'>'", "'<='", "'>='" ];

var symbolicNames = [ null, "WS", "INCLUDE", "INCLUDEPP", "SHARP", "CODE", 
                      "NEW_LINE", "PRAGMA", "DEFINE", "DEFINED", "IF", "ELIF", 
                      "ELSE", "UNDEF", "IFDEF", "IFNDEF", "ENDIF", "ERROR", 
                      "BANG", "LPAREN", "RPAREN", "EQUAL", "NOTEQUAL", "AND", 
                      "OR", "LT", "GT", "LE", "GE", "DIRECTIVE_WHITESPACES", 
                      "DIRECTIVE_STRING", "CONDITIONAL_SYMBOL", "DECIMAL_LITERAL", 
                      "FLOAT", "TEXT", "INCLUDE_DIRECITVE_TEXT_NEW_LINE", 
                      "INCLUDE_FILE" ];

var ruleNames =  [ "preprocessor", "line", "text", "codeLine", "directive", 
                   "include_file", "directive_text", "preprocessor_expression", 
                   "preprocessor_item" ];

function TibboBasicPreprocessorParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

TibboBasicPreprocessorParser.prototype = Object.create(antlr4.Parser.prototype);
TibboBasicPreprocessorParser.prototype.constructor = TibboBasicPreprocessorParser;

Object.defineProperty(TibboBasicPreprocessorParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

TibboBasicPreprocessorParser.EOF = antlr4.Token.EOF;
TibboBasicPreprocessorParser.WS = 1;
TibboBasicPreprocessorParser.INCLUDE = 2;
TibboBasicPreprocessorParser.INCLUDEPP = 3;
TibboBasicPreprocessorParser.SHARP = 4;
TibboBasicPreprocessorParser.CODE = 5;
TibboBasicPreprocessorParser.NEW_LINE = 6;
TibboBasicPreprocessorParser.PRAGMA = 7;
TibboBasicPreprocessorParser.DEFINE = 8;
TibboBasicPreprocessorParser.DEFINED = 9;
TibboBasicPreprocessorParser.IF = 10;
TibboBasicPreprocessorParser.ELIF = 11;
TibboBasicPreprocessorParser.ELSE = 12;
TibboBasicPreprocessorParser.UNDEF = 13;
TibboBasicPreprocessorParser.IFDEF = 14;
TibboBasicPreprocessorParser.IFNDEF = 15;
TibboBasicPreprocessorParser.ENDIF = 16;
TibboBasicPreprocessorParser.ERROR = 17;
TibboBasicPreprocessorParser.BANG = 18;
TibboBasicPreprocessorParser.LPAREN = 19;
TibboBasicPreprocessorParser.RPAREN = 20;
TibboBasicPreprocessorParser.EQUAL = 21;
TibboBasicPreprocessorParser.NOTEQUAL = 22;
TibboBasicPreprocessorParser.AND = 23;
TibboBasicPreprocessorParser.OR = 24;
TibboBasicPreprocessorParser.LT = 25;
TibboBasicPreprocessorParser.GT = 26;
TibboBasicPreprocessorParser.LE = 27;
TibboBasicPreprocessorParser.GE = 28;
TibboBasicPreprocessorParser.DIRECTIVE_WHITESPACES = 29;
TibboBasicPreprocessorParser.DIRECTIVE_STRING = 30;
TibboBasicPreprocessorParser.CONDITIONAL_SYMBOL = 31;
TibboBasicPreprocessorParser.DECIMAL_LITERAL = 32;
TibboBasicPreprocessorParser.FLOAT = 33;
TibboBasicPreprocessorParser.TEXT = 34;
TibboBasicPreprocessorParser.INCLUDE_DIRECITVE_TEXT_NEW_LINE = 35;
TibboBasicPreprocessorParser.INCLUDE_FILE = 36;

TibboBasicPreprocessorParser.RULE_preprocessor = 0;
TibboBasicPreprocessorParser.RULE_line = 1;
TibboBasicPreprocessorParser.RULE_text = 2;
TibboBasicPreprocessorParser.RULE_codeLine = 3;
TibboBasicPreprocessorParser.RULE_directive = 4;
TibboBasicPreprocessorParser.RULE_include_file = 5;
TibboBasicPreprocessorParser.RULE_directive_text = 6;
TibboBasicPreprocessorParser.RULE_preprocessor_expression = 7;
TibboBasicPreprocessorParser.RULE_preprocessor_item = 8;


function PreprocessorContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TibboBasicPreprocessorParser.RULE_preprocessor;
    return this;
}

PreprocessorContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
PreprocessorContext.prototype.constructor = PreprocessorContext;

PreprocessorContext.prototype.EOF = function() {
    return this.getToken(TibboBasicPreprocessorParser.EOF, 0);
};

PreprocessorContext.prototype.line = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(LineContext);
    } else {
        return this.getTypedRuleContext(LineContext,i);
    }
};

PreprocessorContext.prototype.NEW_LINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TibboBasicPreprocessorParser.NEW_LINE);
    } else {
        return this.getToken(TibboBasicPreprocessorParser.NEW_LINE, i);
    }
};


PreprocessorContext.prototype.enterRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.enterPreprocessor(this);
	}
};

PreprocessorContext.prototype.exitRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.exitPreprocessor(this);
	}
};

PreprocessorContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TibboBasicPreprocessorParserVisitor ) {
        return visitor.visitPreprocessor(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TibboBasicPreprocessorParser.PreprocessorContext = PreprocessorContext;

TibboBasicPreprocessorParser.prototype.preprocessor = function() {

    var localctx = new PreprocessorContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, TibboBasicPreprocessorParser.RULE_preprocessor);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 21;
        this._errHandler.sync(this);
        var _alt = this._interp.adaptivePredict(this._input,0,this._ctx)
        while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            if(_alt===1) {
                this.state = 18;
                this.line(); 
            }
            this.state = 23;
            this._errHandler.sync(this);
            _alt = this._interp.adaptivePredict(this._input,0,this._ctx);
        }

        this.state = 31;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,2,this._ctx);
        switch(la_) {
        case 1:
            this.state = 27;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TibboBasicPreprocessorParser.NEW_LINE) {
                this.state = 24;
                this.match(TibboBasicPreprocessorParser.NEW_LINE);
                this.state = 29;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            break;

        case 2:
            this.state = 30;
            this.match(TibboBasicPreprocessorParser.EOF);
            break;

        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function LineContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TibboBasicPreprocessorParser.RULE_line;
    return this;
}

LineContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
LineContext.prototype.constructor = LineContext;

LineContext.prototype.text = function() {
    return this.getTypedRuleContext(TextContext,0);
};

LineContext.prototype.NEW_LINE = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TibboBasicPreprocessorParser.NEW_LINE);
    } else {
        return this.getToken(TibboBasicPreprocessorParser.NEW_LINE, i);
    }
};


LineContext.prototype.enterRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.enterLine(this);
	}
};

LineContext.prototype.exitRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.exitLine(this);
	}
};

LineContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TibboBasicPreprocessorParserVisitor ) {
        return visitor.visitLine(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TibboBasicPreprocessorParser.LineContext = LineContext;

TibboBasicPreprocessorParser.prototype.line = function() {

    var localctx = new LineContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, TibboBasicPreprocessorParser.RULE_line);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 36;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while(_la===TibboBasicPreprocessorParser.NEW_LINE) {
            this.state = 33;
            this.match(TibboBasicPreprocessorParser.NEW_LINE);
            this.state = 38;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 39;
        this.text();
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function TextContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TibboBasicPreprocessorParser.RULE_text;
    return this;
}

TextContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
TextContext.prototype.constructor = TextContext;

TextContext.prototype.include_file = function() {
    return this.getTypedRuleContext(Include_fileContext,0);
};

TextContext.prototype.directive = function() {
    return this.getTypedRuleContext(DirectiveContext,0);
};

TextContext.prototype.codeLine = function() {
    return this.getTypedRuleContext(CodeLineContext,0);
};

TextContext.prototype.enterRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.enterText(this);
	}
};

TextContext.prototype.exitRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.exitText(this);
	}
};

TextContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TibboBasicPreprocessorParserVisitor ) {
        return visitor.visitText(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TibboBasicPreprocessorParser.TextContext = TextContext;

TibboBasicPreprocessorParser.prototype.text = function() {

    var localctx = new TextContext(this, this._ctx, this.state);
    this.enterRule(localctx, 4, TibboBasicPreprocessorParser.RULE_text);
    try {
        this.state = 44;
        this._errHandler.sync(this);
        switch(this._input.LA(1)) {
        case TibboBasicPreprocessorParser.INCLUDE:
        case TibboBasicPreprocessorParser.INCLUDEPP:
            this.enterOuterAlt(localctx, 1);
            this.state = 41;
            this.include_file();
            break;
        case TibboBasicPreprocessorParser.SHARP:
            this.enterOuterAlt(localctx, 2);
            this.state = 42;
            this.directive();
            break;
        case TibboBasicPreprocessorParser.CODE:
            this.enterOuterAlt(localctx, 3);
            this.state = 43;
            this.codeLine();
            break;
        default:
            throw new antlr4.error.NoViableAltException(this);
        }
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function CodeLineContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TibboBasicPreprocessorParser.RULE_codeLine;
    return this;
}

CodeLineContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
CodeLineContext.prototype.constructor = CodeLineContext;

CodeLineContext.prototype.CODE = function() {
    return this.getToken(TibboBasicPreprocessorParser.CODE, 0);
};

CodeLineContext.prototype.enterRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.enterCodeLine(this);
	}
};

CodeLineContext.prototype.exitRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.exitCodeLine(this);
	}
};

CodeLineContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TibboBasicPreprocessorParserVisitor ) {
        return visitor.visitCodeLine(this);
    } else {
        return visitor.visitChildren(this);
    }
};




TibboBasicPreprocessorParser.CodeLineContext = CodeLineContext;

TibboBasicPreprocessorParser.prototype.codeLine = function() {

    var localctx = new CodeLineContext(this, this._ctx, this.state);
    this.enterRule(localctx, 6, TibboBasicPreprocessorParser.RULE_codeLine);
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 46;
        this.match(TibboBasicPreprocessorParser.CODE);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};


function DirectiveContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TibboBasicPreprocessorParser.RULE_directive;
    return this;
}

DirectiveContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
DirectiveContext.prototype.constructor = DirectiveContext;


 
DirectiveContext.prototype.copyFrom = function(ctx) {
    antlr4.ParserRuleContext.prototype.copyFrom.call(this, ctx);
};


function PreprocessorDefContext(parser, ctx) {
	DirectiveContext.call(this, parser);
    DirectiveContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PreprocessorDefContext.prototype = Object.create(DirectiveContext.prototype);
PreprocessorDefContext.prototype.constructor = PreprocessorDefContext;

TibboBasicPreprocessorParser.PreprocessorDefContext = PreprocessorDefContext;

PreprocessorDefContext.prototype.SHARP = function() {
    return this.getToken(TibboBasicPreprocessorParser.SHARP, 0);
};

PreprocessorDefContext.prototype.IFDEF = function() {
    return this.getToken(TibboBasicPreprocessorParser.IFDEF, 0);
};

PreprocessorDefContext.prototype.CONDITIONAL_SYMBOL = function() {
    return this.getToken(TibboBasicPreprocessorParser.CONDITIONAL_SYMBOL, 0);
};

PreprocessorDefContext.prototype.IFNDEF = function() {
    return this.getToken(TibboBasicPreprocessorParser.IFNDEF, 0);
};
PreprocessorDefContext.prototype.enterRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.enterPreprocessorDef(this);
	}
};

PreprocessorDefContext.prototype.exitRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.exitPreprocessorDef(this);
	}
};

PreprocessorDefContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TibboBasicPreprocessorParserVisitor ) {
        return visitor.visitPreprocessorDef(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function PreprocessorErrorContext(parser, ctx) {
	DirectiveContext.call(this, parser);
    DirectiveContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PreprocessorErrorContext.prototype = Object.create(DirectiveContext.prototype);
PreprocessorErrorContext.prototype.constructor = PreprocessorErrorContext;

TibboBasicPreprocessorParser.PreprocessorErrorContext = PreprocessorErrorContext;

PreprocessorErrorContext.prototype.SHARP = function() {
    return this.getToken(TibboBasicPreprocessorParser.SHARP, 0);
};

PreprocessorErrorContext.prototype.ERROR = function() {
    return this.getToken(TibboBasicPreprocessorParser.ERROR, 0);
};

PreprocessorErrorContext.prototype.directive_text = function() {
    return this.getTypedRuleContext(Directive_textContext,0);
};
PreprocessorErrorContext.prototype.enterRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.enterPreprocessorError(this);
	}
};

PreprocessorErrorContext.prototype.exitRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.exitPreprocessorError(this);
	}
};

PreprocessorErrorContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TibboBasicPreprocessorParserVisitor ) {
        return visitor.visitPreprocessorError(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function PreprocessorUndefContext(parser, ctx) {
	DirectiveContext.call(this, parser);
    DirectiveContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PreprocessorUndefContext.prototype = Object.create(DirectiveContext.prototype);
PreprocessorUndefContext.prototype.constructor = PreprocessorUndefContext;

TibboBasicPreprocessorParser.PreprocessorUndefContext = PreprocessorUndefContext;

PreprocessorUndefContext.prototype.SHARP = function() {
    return this.getToken(TibboBasicPreprocessorParser.SHARP, 0);
};

PreprocessorUndefContext.prototype.UNDEF = function() {
    return this.getToken(TibboBasicPreprocessorParser.UNDEF, 0);
};

PreprocessorUndefContext.prototype.CONDITIONAL_SYMBOL = function() {
    return this.getToken(TibboBasicPreprocessorParser.CONDITIONAL_SYMBOL, 0);
};
PreprocessorUndefContext.prototype.enterRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.enterPreprocessorUndef(this);
	}
};

PreprocessorUndefContext.prototype.exitRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.exitPreprocessorUndef(this);
	}
};

PreprocessorUndefContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TibboBasicPreprocessorParserVisitor ) {
        return visitor.visitPreprocessorUndef(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function PreprocessorConditionalContext(parser, ctx) {
	DirectiveContext.call(this, parser);
    DirectiveContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PreprocessorConditionalContext.prototype = Object.create(DirectiveContext.prototype);
PreprocessorConditionalContext.prototype.constructor = PreprocessorConditionalContext;

TibboBasicPreprocessorParser.PreprocessorConditionalContext = PreprocessorConditionalContext;

PreprocessorConditionalContext.prototype.SHARP = function() {
    return this.getToken(TibboBasicPreprocessorParser.SHARP, 0);
};

PreprocessorConditionalContext.prototype.IF = function() {
    return this.getToken(TibboBasicPreprocessorParser.IF, 0);
};

PreprocessorConditionalContext.prototype.preprocessor_expression = function() {
    return this.getTypedRuleContext(Preprocessor_expressionContext,0);
};

PreprocessorConditionalContext.prototype.ELIF = function() {
    return this.getToken(TibboBasicPreprocessorParser.ELIF, 0);
};

PreprocessorConditionalContext.prototype.ELSE = function() {
    return this.getToken(TibboBasicPreprocessorParser.ELSE, 0);
};
PreprocessorConditionalContext.prototype.enterRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.enterPreprocessorConditional(this);
	}
};

PreprocessorConditionalContext.prototype.exitRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.exitPreprocessorConditional(this);
	}
};

PreprocessorConditionalContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TibboBasicPreprocessorParserVisitor ) {
        return visitor.visitPreprocessorConditional(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function PreprocessorPragmaContext(parser, ctx) {
	DirectiveContext.call(this, parser);
    DirectiveContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PreprocessorPragmaContext.prototype = Object.create(DirectiveContext.prototype);
PreprocessorPragmaContext.prototype.constructor = PreprocessorPragmaContext;

TibboBasicPreprocessorParser.PreprocessorPragmaContext = PreprocessorPragmaContext;

PreprocessorPragmaContext.prototype.SHARP = function() {
    return this.getToken(TibboBasicPreprocessorParser.SHARP, 0);
};

PreprocessorPragmaContext.prototype.PRAGMA = function() {
    return this.getToken(TibboBasicPreprocessorParser.PRAGMA, 0);
};

PreprocessorPragmaContext.prototype.directive_text = function() {
    return this.getTypedRuleContext(Directive_textContext,0);
};
PreprocessorPragmaContext.prototype.enterRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.enterPreprocessorPragma(this);
	}
};

PreprocessorPragmaContext.prototype.exitRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.exitPreprocessorPragma(this);
	}
};

PreprocessorPragmaContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TibboBasicPreprocessorParserVisitor ) {
        return visitor.visitPreprocessorPragma(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function PreprocessorDefineContext(parser, ctx) {
	DirectiveContext.call(this, parser);
    DirectiveContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PreprocessorDefineContext.prototype = Object.create(DirectiveContext.prototype);
PreprocessorDefineContext.prototype.constructor = PreprocessorDefineContext;

TibboBasicPreprocessorParser.PreprocessorDefineContext = PreprocessorDefineContext;

PreprocessorDefineContext.prototype.SHARP = function() {
    return this.getToken(TibboBasicPreprocessorParser.SHARP, 0);
};

PreprocessorDefineContext.prototype.DEFINE = function() {
    return this.getToken(TibboBasicPreprocessorParser.DEFINE, 0);
};

PreprocessorDefineContext.prototype.CONDITIONAL_SYMBOL = function() {
    return this.getToken(TibboBasicPreprocessorParser.CONDITIONAL_SYMBOL, 0);
};

PreprocessorDefineContext.prototype.directive_text = function() {
    return this.getTypedRuleContext(Directive_textContext,0);
};
PreprocessorDefineContext.prototype.enterRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.enterPreprocessorDefine(this);
	}
};

PreprocessorDefineContext.prototype.exitRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.exitPreprocessorDefine(this);
	}
};

PreprocessorDefineContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TibboBasicPreprocessorParserVisitor ) {
        return visitor.visitPreprocessorDefine(this);
    } else {
        return visitor.visitChildren(this);
    }
};


function PreprocessorEndConditionalContext(parser, ctx) {
	DirectiveContext.call(this, parser);
    DirectiveContext.prototype.copyFrom.call(this, ctx);
    return this;
}

PreprocessorEndConditionalContext.prototype = Object.create(DirectiveContext.prototype);
PreprocessorEndConditionalContext.prototype.constructor = PreprocessorEndConditionalContext;

TibboBasicPreprocessorParser.PreprocessorEndConditionalContext = PreprocessorEndConditionalContext;

PreprocessorEndConditionalContext.prototype.SHARP = function() {
    return this.getToken(TibboBasicPreprocessorParser.SHARP, 0);
};

PreprocessorEndConditionalContext.prototype.ENDIF = function() {
    return this.getToken(TibboBasicPreprocessorParser.ENDIF, 0);
};
PreprocessorEndConditionalContext.prototype.enterRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.enterPreprocessorEndConditional(this);
	}
};

PreprocessorEndConditionalContext.prototype.exitRule = function(listener) {
    if(listener instanceof TibboBasicPreprocessorParserListener ) {
        listener.exitPreprocessorEndConditional(this);
	}
};

PreprocessorEndConditionalContext.prototype.accept = function(visitor) {
    if ( visitor instanceof TibboBasicPreprocessorParserVisitor ) {
        return visitor.visitPreprocessorEndConditional(this);
    } else {
        return visitor.visitChildren(this);
    }
};



TibboBasicPreprocessorParser.DirectiveContext = DirectiveContext;

TibboBasicPreprocessorParser.prototype.directive = function() {

    var localctx = new DirectiveContext(this, this._ctx, this.state);
    this.enterRule(localctx, 8, TibboBasicPreprocessorParser.RULE_directive);
    var _la = 0; // Token type
    try {
        this.state = 79;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,6,this._ctx);
        switch(la_) {
        case 1:
            localctx = new PreprocessorConditionalContext(this, localctx);
            this.enterOuterAlt(localctx, 1);
            this.state = 48;
            this.match(TibboBasicPreprocessorParser.SHARP);
            this.state = 49;
            this.match(TibboBasicPreprocessorParser.IF);
            this.state = 50;
            this.preprocessor_expression(0);
            break;

        case 2:
            localctx = new PreprocessorConditionalContext(this, localctx);
            this.enterOuterAlt(localctx, 2);
            this.state = 51;
            this.match(TibboBasicPreprocessorParser.SHARP);
            this.state = 52;
            this.match(TibboBasicPreprocessorParser.ELIF);
            this.state = 53;
            this.preprocessor_expression(0);
            break;

        case 3:
            localctx = new PreprocessorConditionalContext(this, localctx);
            this.enterOuterAlt(localctx, 3);
            this.state = 54;
            this.match(TibboBasicPreprocessorParser.SHARP);
            this.state = 55;
            this.match(TibboBasicPreprocessorParser.ELSE);
            break;

        case 4:
            localctx = new PreprocessorEndConditionalContext(this, localctx);
            this.enterOuterAlt(localctx, 4);
            this.state = 56;
            this.match(TibboBasicPreprocessorParser.SHARP);
            this.state = 57;
            this.match(TibboBasicPreprocessorParser.ENDIF);
            break;

        case 5:
            localctx = new PreprocessorDefContext(this, localctx);
            this.enterOuterAlt(localctx, 5);
            this.state = 58;
            this.match(TibboBasicPreprocessorParser.SHARP);
            this.state = 59;
            this.match(TibboBasicPreprocessorParser.IFDEF);
            this.state = 60;
            this.match(TibboBasicPreprocessorParser.CONDITIONAL_SYMBOL);
            break;

        case 6:
            localctx = new PreprocessorDefContext(this, localctx);
            this.enterOuterAlt(localctx, 6);
            this.state = 61;
            this.match(TibboBasicPreprocessorParser.SHARP);
            this.state = 62;
            this.match(TibboBasicPreprocessorParser.IFNDEF);
            this.state = 63;
            this.match(TibboBasicPreprocessorParser.CONDITIONAL_SYMBOL);
            break;

        case 7:
            localctx = new PreprocessorUndefContext(this, localctx);
            this.enterOuterAlt(localctx, 7);
            this.state = 64;
            this.match(TibboBasicPreprocessorParser.SHARP);
            this.state = 65;
            this.match(TibboBasicPreprocessorParser.UNDEF);
            this.state = 66;
            this.match(TibboBasicPreprocessorParser.CONDITIONAL_SYMBOL);
            break;

        case 8:
            localctx = new PreprocessorPragmaContext(this, localctx);
            this.enterOuterAlt(localctx, 8);
            this.state = 67;
            this.match(TibboBasicPreprocessorParser.SHARP);
            this.state = 68;
            this.match(TibboBasicPreprocessorParser.PRAGMA);
            this.state = 69;
            this.directive_text();
            break;

        case 9:
            localctx = new PreprocessorErrorContext(this, localctx);
            this.enterOuterAlt(localctx, 9);
            this.state = 70;
            this.match(TibboBasicPreprocessorParser.SHARP);
            this.state = 71;
            this.match(TibboBasicPreprocessorParser.ERROR);
            this.state = 72;
            this.directive_text();
            break;

        case 10:
            localctx = new PreprocessorDefineContext(this, localctx);
            this.enterOuterAlt(localctx, 10);
            this.state = 73;
            this.match(TibboBasicPreprocessorParser.SHARP);
            this.state = 74;
            this.match(TibboBasicPreprocessorParser.DEFINE);
            this.state = 75;
            this.match(TibboBasicPreprocessorParser.CONDITIONAL_SYMBOL);
            this.state = 77;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===TibboBasicPreprocessorParser.TEXT) {
                this.state = 76;
                this.directive_text();
            }

            break;
